--- a/app/index.html
+++ b/app/index.html
@@ -28,13 +28,13 @@
     <!-- TODO HS-3 - Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Aplikasi Project Ricky">
+    <meta name="apple-mobile-web-app-title" content="Aplikasi Percepatan">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
     <!-- TODO HS-4 - Tile icons for Windows -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
     <meta name="msapplication-TileColor" content="#2F3BA2">
 
-    <title>PWA Ricky Project</title>
+    <title>PWA Percepatan</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.0/material.grey-pink.min.css" />
     <link rel="stylesheet" href="styles/main.css" />
